--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
