--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title></title>
     <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="blog system with posts and categories">
+    <meta name="keywords" content="blog, posts, categories">
+    <meta name="author" content="Aviv Haruzi">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700,700i" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
